march/act_10/k8s_yaml/mongoexpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodbexpress-deployment
  labels:
    app: mongodbexpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodbexpress
  template:
    metadata:
      labels:
        app: mongodbexpress
    spec:
      containers:
      - name: mongodbexpress
        image: raemondarellano/act10mongo-express:latest
        ports:
        - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
  name: mongodbexpress-service
spec:
  selector:
    app: mongodbexpress
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 8081
#      nodePort: 30000
