march/act_10/k8s_yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app10

spec:
  rules:
  - host: "my.app10"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-act10
            port:
              number: 80
